# git-future-web-demo

./: Cargo.toml  README.md
.github/workflows/: publish.yml
js/: package-lock.json  package.json  tsconfig.json  webpack.config.js
js/src/: app.tsx  async.tsx  blob.tsx  commit-view.tsx  diff-view.tsx  errors.tsx  fake-view.ts  index.js  index.ts  link.tsx  props.ts  ref-nav.tsx  ref.ts  state.ts  tree.tsx  types.ts  use-hash-location.ts  view.ts
js/src/file-api/: entries.ts  file.ts  fs.ts
js/src/file-browser/: blob.tsx  commit.tsx  index.tsx  ref-nav.tsx  tree.tsx
js/src/helpers/: assert-never.ts  assert-string.ts
js/src/model/: effect.ts  ephemeral.ts  mutator.ts  state.ts  view-model.ts
js/src/types/: diff.ts  git.ts
js/src/worker/: handler.ts  types.ts  worker.ts
js/static/: about.html  extra.css  index.html
rgit-core/: Cargo.toml
rgit-core/src/: directory.rs  object.rs
rgit-core/src/test/: repo.rs
rgit-web/: Cargo.toml
rust/: Cargo.toml
rust/rgit-web/: Cargo.toml
rust/rgit-web/src/: collect.js  diff.rs  directory.rs  error.js  error.rs  impls.rs  js_interop.rs  lib.rs  object.rs  reference.rs  repo.rs
rust/src/: diff.rs  directory.js  directory.rs  error.rs  impls.rs  lib.rs  object.rs  reference.rs  repo.rs
scripts/: build-wasm.py
src/: directory.rs  error.rs  lib.rs  object.rs  reference.rs  repo.rs
src/test/: repo.rs
