[package]
name = "rgit-core"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", default-features = false, features = ["alloc"] }
hex = { version = "0.4.3", default-features = false, features = [] }
miniz_oxide = "0.9.1"
nom = { version = "8.0.0", default-features = false, features = ["alloc"] }

[dev-dependencies]
futures = "0.3.32"
hex-literal = "1.1.0"
tempfile = "3.27.0"
