[package]
name = "git-future-web"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = { version = "0.3.92" }
postcard = { version = "1.1.3", features = ["alloc"], default-features = false }
git-future = { path = "../../git-future" }
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11.19"
similar = { version = "3.1.0" }
wasm-bindgen = { version = "0.2.115" }
wasm-bindgen-futures = "0.4.66"
web-sys = { version = "0.3.92", features = [
  "DomException",
  "File",
  "FileSystemDirectoryHandle",
  "FileSystemFileHandle",
  "console",
] }
