[package]
name = "git-async-web"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
git-async = { version = "0.1.0", features = ["diff", "web"] }
js-sys = "0.3.97"
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11.19"
similar = { version = "3.1.0" }
wasm-bindgen = "0.2.120"
wasm-bindgen-futures = "0.4.70"
