[package]
name = "rgit-web"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = { version = "0.3.92" }
rgit-core = { path = "../rgit-core" }
serde = "1.0.228"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = { version = "0.2.115" }
wasm-bindgen-futures = "0.4.66"
web-sys = { version = "0.3.92", features = [
  "File",
  "FileSystemDirectoryHandle",
  "FileSystemFileHandle",
  "DomException",
  "console"
] }
